[build-system]
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "volttron-platform-driver"
version = "0.1.0"
description = "The Platform Driver agent is a special purpose agent that manages communication between the Volttron platform and devices. The Platform driver features a number of endpoints for collecting data and sending control signals using the message bus and automatically publishes data to the bus on a specified interval."
authors = ["Mark Bonicillo <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/VOLTTRON/platform-driver-agent"
homepage = "https://github.com/VOLTTRON/platform-driver-agent"
keywords = []
packages = [ { include = "volttron", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
volttron-lib-base-driver = {git = "https://github.com/VOLTTRON/volttron-lib-base-driver.git", branch = "develop"}

[tool.poetry.group.dev.dependencies]
volttron-testing = "^0.3.1a3"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
safety = "^1.10.3"
mypy = "^0.942"
coverage = "^6.3.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
volttron-platform-driver = "volttron.platform_driver.agent:main"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]
