[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "volttron-lib-driver"
version = "0.1.0"
description = "Volttron Driver libraries used to support development within the Volttron Driver Framework."
authors = ["VOLTTRON <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/VOLTTRON/platform-driver-agent"
homepage = "https://github.com/VOLTTRON/platform-driver-agent"
keywords = []
packages = [ { include = "volttron", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
# Uncomment if you want to use the url link to volttron-core
# volttron = {url = "https://github.com/VOLTTRON/volttron-core/releases/download/v10.0.1-alpha.10/volttron-10.0.1a10.tar.gz"}

[tool.poetry.dev-dependencies]
# TODO: remove this once development is done and volttron-core is publicly available
# this path assumes that volttron-core is two directories up from this module
volttron = {path = "../../volttron-core", develop = true}

pytest = "^6.2.5"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
safety = "^1.10.3"
mypy = "^0.942"
coverage = "^6.3.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]
